<resources>
    <string name="app_name">Fazt</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrate">Registrate</string>
    <string name="fazt">Fazt</string>
    <string name="regresar">Regresar</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="title_map">Map</string>
    <string name="title_deliveries">Deliveries</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
</resources>
